public/studentsubmission/Logs/demo1/[118-69-133-17][90986095][demo1][CE150124][A].c.log
Compile Error
[118-69-133-17][90986095][demo1][CE150124][A].c:3:1: error: unknown type name 'using'
 using namespace std;
 ^~~~~
[118-69-133-17][90986095][demo1][CE150124][A].c:3:17: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'std'
 using namespace std;
                 ^~~
